# LUCY

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  agentmail_client.py  audiointeraction_shadow.py  companion_email.py  hume_evi_bridge.py  interaction_state.py  internet_search.py  inworld_realtime_bridge (1).py  inworld_realtime_bridge.py  inworld_voice_profile.py  kokoro_plugin.py  memory_embeddings.py  memory_layer.py  omnivoice_expression.py  omnivoice_language.py  omnivoice_planner.py  omnivoice_tts.py  omnivoice_voice_pool.py  pyproject.toml  railway.toml  railway.worker.toml  requirements.txt  runtime_context.py  server.py  test_inworld_realtime_bridge.py  test_inworld_realtime_bridge_fixes.py  test_inworld_realtime_bridge_state_machine.py  transcript_context.py  voice_interruption.py
Lucy repo/app/: README.md  deploy-flyio.sh  index.html  start.sh  vite.config.ts
config/: omnivoice_voice_pool.example.json
db/migrations/: 001_memory_schema.sql  002_memory_modalities.sql  003_feedback.sql  004_better_auth_core.sql  005_memory_pgvector.sql  005_pgvector_memory.sql
docs/: eot_bench_smoke_test.md
frontend/: .env.example  .gitignore  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConnectButton.tsx  MicPill.tsx  SettingsPanel.tsx  Waveform.tsx
frontend/hooks/: useAudioDevices.ts  useVoiceClient.ts  useWaveform.ts
frontend/lib/: agentmail.ts  auth-client.ts  auth.ts  magic-link-email.ts
scripts/: apply_migrations.py  audiointeraction_sidecar.py
sidecar/omnivoice/: Dockerfile  README.md  app.py  (+1 more)
tests/: test_agent_turn_state.py  test_audio_turn_detection.py  test_audiointeraction_shadow.py  test_better_auth_migration.py  test_context_coherence.py  test_context_policy.py  test_emotional_calibration.py  test_greeting_prerender.py  test_handoff_guard.py  test_hume_evi.py  test_interaction_state.py  test_inworld_realtime_bridge.py  test_inworld_realtime_entrypoint_gate.py  test_inworld_voice_profile.py  test_memory_embeddings.py  test_memory_layer.py  test_memory_retrieval_gate.py  test_omnivoice_expression.py  test_omnivoice_language.py  test_omnivoice_planner.py  test_omnivoice_tts.py  test_omnivoice_voice_pool.py  test_post_speech_hold.py  test_runtime_context_datetime.py  test_search_gate_and_recall.py  test_session_time_limit.py  test_suppression_recovery.py  test_tool_resume_composer.py  test_transcript_context.py  test_tts_output_gain.py  test_turn_candidate.py  test_voice_interruption.py
(+36 files in other folders)
