[project]
name = "lucy"
version = "0.1.0"
description = "LUCY voice server"
requires-python = ">=3.11"
dependencies = [
  "livekit-agents[mistralai,openai,silero,turn-detector,deepgram,hume]~=1.5",
  "python-dotenv",
  "tavily-python",
  "fastapi",
  "uvicorn",
  "livekit-api",
  "livekit-plugins-ai-coustics>=0.2.15",
  "psycopg[binary]",
]

[project.optional-dependencies]
# SimpleMem pulls heavy multimodal dependencies (torch, FAISS); keep it out of the
# default image. Install with `uv sync --extra memory` and set MEMORY_ENABLED=true.
memory = [
  "simplemem",
]
