[project]
name = "lucy"
version = "0.1.0"
description = "LUCY voice server"
requires-python = ">=3.11"
dependencies = [
  "livekit-agents[mistralai,openai,silero,turn-detector,deepgram,hume]>=1.6.1,<1.7",
  "python-dotenv",
  "tavily-python",
  "fastapi",
  "uvicorn",
  "livekit-api",
  "livekit-plugins-ai-coustics>=0.2.15",
  "psycopg[binary]",
  # Used directly by the OmniVoice sidecar client and the Inworld voice-profile
  # shadow (and the Hume TTS path). Declared explicitly so a clean install/CI has
  # it rather than relying on it arriving transitively.
  "aiohttp>=3.9",
]

[project.optional-dependencies]
# SimpleMem pulls heavy multimodal dependencies (torch, FAISS); keep it out of the
# default image. Install with `uv sync --extra memory` and set MEMORY_ENABLED=true.
memory = [
  "simplemem",
]
